# roblox-chess-script

./: .gitattributes  .gitignore  Cargo.toml  README.md  script.luau
.github/workflows/: lune.yml  release.yml
client/: .eslintrc  .gitignore  mise.toml  package.json  place.project.json  sourcemap.json  tsconfig.json
client/ci/: darklua.json
client/ci/include/: header.lua
client/src/: .gitattributes  main.client.ts
client/src/libs/: Rayfield.d.ts  Rayfield.lua  Unc.d.ts  Unc.lua
client/src/types/: server.d.ts
client/src/utils/: CoreGui.ts  Highlighter.ts  HttpGet.ts  destoryErrorLogging.ts  findBestMove.ts  findOrCreateFolder.ts  findOrCreateInstance.ts  genRandomString.ts  getPosFromResult.ts  getSkins.ts  rprint.ts
server/: .gitignore  .prettierignore  .prettierrc.json  API.md  Cargo.toml  build.ps1  build.sh  difficulty.rs  eslint.config.js  package.json  pnpm-lock.yaml  script.luau  svelte.config.js  tailwind.config.ts  vite.config.js
server/src/: app.css  app.html  macros.rs  main.rs
server/src-tauri/: Cargo.toml  tauri.conf.json
server/src-tauri/capabilities/: default.json
server/src-tauri/src/: app_state.rs  lib.rs  local_api.rs  main.rs
server/src-tauri/src/api/: error.rs  mod.rs  routes.rs  types.rs
server/src-tauri/src/commands/: mod.rs
server/src-tauri/src/config/: model.rs  store.rs
server/src-tauri/src/engine/: analysis.rs  difficulty.rs  installer.rs  manager.rs  mod.rs  stockfish.rs  uci.rs
server/src-tauri/tests/: api_tests.rs  config_tests.rs  difficulty_tests.rs  uci_tests.rs
server/src/lib/: tauriApi.ts  utils.ts
server/src/routes/: +layout.svelte  +page.svelte
server/src/uci/: mod.rs
server_gui/: Cargo.toml  LICENSE
server_gui/src/: keybindings.rs  main.rs
server_gui/src/tabs/: counter.rs  greeting.rs  mod.rs
server_gui/src/widgets/: mod.rs
src/: macros.rs  main.rs  simple_logger.rs
src/uci/: error.rs  lib.rs  mod.rs  tempCodeRunnerFile.rs
(+17 files in other folders)
