[package]
name = "server_gui"
version = "0.1.0"
description = "A tui for controlling the server for roblox-chess-script"
authors = ["keplerHaloxx <80098945+keplerHaloxx@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"